[package]
name = "rust-typer"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.22"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.14"
clap = { version = "4.0" }
termion = "1.5.6"
